<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version_name">STD.CHN.V0.994&#8211;130926</string>
    
    <string name="favorite">Favorite</string>
    <string name="theme">Monthly Theme</string>
    <string name="radio">Radio</string>
    <string name="popular">Popular</string>
    <string name="billboard">Billboard</string>
    <string name="newsong">New</string>
    <string name="search">Search</string>
    <string name="driving">Driving Mode</string>

    <string name="app_name">Baidu Music</string>
    <string name="action_settings">Settings</string>
    
    <string name="help">Help</string>
    <string name="notice">Notice</string>
    <string name="version">Version</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="top">List to top</string>
    
    <string name="dialog_warning">Warning!</string>
    <string name="dialog_exit">Do you exit the Baidu music?</string>
    <string name="mainmenu_exit">Do you exit the Baidu music?</string>
    
    <string name="search_hint">Song, Artist, Album</string>
    
    <string name="loading">Loading&#8230;</string>
    <string name="searching">Searching&#8230;</string>
    
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    
    <string name="warning">Warning</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
    
    <string name="delete_one_warning">Do you delete this?</string>
    <string name="delete_all_warning">Do you delete all?</string>
    
    <string name="added_to_favorite">This is added to favorite</string>
    <string name="please_add_to_favorite">Please add song to Favorite</string>
    <string name="please_try_again">Please try again after a while</string>
    
    <string name="edit_warning">Can\'t modify list while playing music</string>
    <string name="no_result">There is no search result</string>
    <string name="delete_last_and_add">Do you want to remove \'%s\' song in the bottom of the list, and add it?</string>
    <string name="input_keyword">Please enter search keyword</string>
    
    <!-- Alarm Message -->
    <string name="warning_network_connection_fail">The connection has been broken.</string>
    
    <string name="warning_network_connection1">Network connection has been lost. Please check the network status.</string>
    <string name="warning_network_connection2">Network is not connected. Do you want to exit the application?</string>
    <string name="warning_3gnetwork_connection">Connecting 3G network, you may have to pay data charges. Do you want to continue?</string>
    
    <string name="warning_driving_search">While driving, you can\'t use search function</string>    
    <string name="notice_content">This application contains content provided by the Baidu music.\nThere may be temporal interruption or termination caused by change of mobile network environment. And this service may not be available if the policy were changed. Service related information, see the Service Agreement.</string>
    <string name="warning_no_response_from_server">The server is not responding. Please try again in a few minutes.</string>
    <string name="warning_media_format_is_not_supported">Media format is invalid. Please choose a different music.</string>
    <string name="warning_wait_time_is_expired">Timed out waiting for a server response. Please try again in a few minutes.</string>
    
    <!-- Bottom Message -->
    <string name="greeting">Welcome! Please wait a moment for setting up favorites</string>
    <string name="selectmusic">There is no selected music. Select a music category.</string>
    <string name="connectWL">Connect WL</string>
    <string name="disconnectWL">Disconnect WL</string>
</resources>