<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/driving_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_title" >

        <ImageView
            android:id="@+id/baidu_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_main" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxWidth="550dp"
            android:singleLine="true"
            android:textSize="22sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="704dp"
            android:background="@drawable/selector_btn_back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/favorite_none" />

        <TextView
            android:id="@+id/no_content_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_add_to_favorite"
            android:textColor="#494b4d"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginLeft="127dp"
                android:layout_marginTop="54dp"
                android:background="@color/thumb_shaper"
                android:padding="2dp" >

                <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/img_none_big" />

                <ProgressBar
                    android:id="@+id/img_loading"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <com.obigo.baidumusic.standard.view.CategoryView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="310dp"
                android:layout_marginTop="65dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="306dp"
                android:layout_marginTop="112dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="306dp"
                android:layout_marginTop="156dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#007eff"
                android:textSize="34sp" />

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="206dp"
                android:layout_marginTop="240dp"
                android:background="@drawable/selector_btn_big_pre" />

            <Button
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="295dp"
                android:layout_marginTop="228dp"
                android:background="@drawable/selector_btn_big_play" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="409dp"
                android:layout_marginTop="240dp"
                android:background="@drawable/selector_btn_big_next" />

            <Button
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="500dp"
                android:layout_marginTop="240dp"
                android:background="@drawable/selector_btn_big_favorite" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#cc000000"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/loadingStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/loadingImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@anim/animation_4_loading"
                android:contentDescription="@string/loading" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>