<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_title" >

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ico_search"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:text="@string/search"
            android:textSize="22sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="704dp"
            android:background="@drawable/selector_btn_back" />

        <Button
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="600dp"
            android:background="@drawable/selector_btn_all" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_main" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_search_body"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_search_body_text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:id="@+id/artist1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/list_selected"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/artist2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/list_selected"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/artist3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/list_selected"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/artist4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:height="27dp"
                    android:singleLine="true"
                    android:textColor="@color/list_selected"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/artist5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/list_selected"
                    android:textSize="22sp" />
            </LinearLayout>

            <com.obigo.baidumusic.standard.search.AutoSearchBar
                android:id="@+id/search_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ListView
                    android:id="@+id/search_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="-5dp"
                    android:cacheColorHint="#00000000"
                    android:fadingEdge="none"
                    android:listSelector="@drawable/search_list_selector"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="0dp"
                    android:scrollbarTrackVertical="@drawable/bar_scroll" />
<!-- 
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/mask_search" />
                     -->
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#cc000000"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/loadingStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/loadingImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@anim/animation_4_loading"
                android:contentDescription="@string/loading" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>