<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title" >

        <ImageView
            android:id="@+id/baidu_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_main" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxWidth="550dp"
            android:singleLine="true"
            android:textSize="26sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="704dp"
            android:background="@drawable/selector_btn_back" />

        <com.obigo.baidumusic.standard.view.MenuButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="600dp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/favorite_none" />

        <TextView
            android:id="@+id/no_content_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_add_to_favorite"
            android:textColor="#494b4d"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="400dp"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_album"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="@dimen/thumb_size"
                    android:layout_height="@dimen/thumb_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="124dp"
                    android:layout_marginTop="28dp"
                    android:background="@color/thumb_shaper"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@+id/thumb"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/img_none_big" />

                    <ProgressBar
                        android:id="@+id/img_loading"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="194dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="221dp"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="#007eff"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="251dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="21sp" />

                <Button
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="225dp"
                    android:layout_marginTop="124dp"
                    android:background="@drawable/selector_btn_favorite" />

                <LinearLayout
                    android:id="@+id/controller"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/shuffle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_shuffleon" />

                    <Button
                        android:id="@+id/prev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_pre" />

                    <Button
                        android:id="@+id/play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_play" />

                    <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_next" />

                    <Button
                        android:id="@+id/loop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_btn_repeatall" />
                </LinearLayout>
            </RelativeLayout>

            <ListView
                android:id="@+id/list"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:choiceMode="singleChoice"
                android:fadingEdge="none"
                android:focusable="true"
                android:scrollbarTrackVertical="@drawable/bar_scroll" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#cc000000"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/loadingStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/loadingImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@anim/animation_4_loading"
                android:contentDescription="@string/loading" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>